--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
 <body>
 
     <!-- Start navbar -->
-    <nav class="navbar navbar-expand-md top-0 navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-lg top-0 navbar-light bg-light sticky-top">
         <div class="container-fluid">
             <!-- Title on the left -->
             <a class="navbar-brand" id="a-home">Météhenchoz</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" id="btn-toggler">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!-- List of menus -->
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <!-- Menus -->
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" id="a-forecast">Prévisions</a>
                     </li>
