--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <script type="text/javascript" src="js/ctrls/httpServ.js"></script>
     <script type="text/javascript" src="js/ctrls/homeCtrl.js"></script>
     <script type="text/javascript" src="js/ctrls/footerCtrl.js"></script>
-    <script type="text/javascript" src="js/ctrls/forecast.js"></script>
-    <script type="text/javascript" src="js/ctrls/documentation.js"></script>
-    <script type="text/javascript" src="js/ctrls/api.js"></script>
-    <script type="text/javascript" src="js/ctrls/about.js"></script>
+    <script type="text/javascript" src="js/ctrls/forecastCtrl.js"></script>
+    <script type="text/javascript" src="js/ctrls/docCtrl.js"></script>
+    <script type="text/javascript" src="js/ctrls/apiCtrl.js"></script>
+    <script type="text/javascript" src="js/ctrls/aboutCtrl.js"></script>
     <!-- Icon from font-awesome.com -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -63,7 +63,7 @@
                         <a class="nav-link" id="a-api">API</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="a-about">A propos</a>
+                        <a class="nav-link" id="a-about">À propos</a>
                     </li>
                 </ul>
                 <!-- Search -->
