--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a class="nav-link" id="a-forecast">Prévisions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="a-documentation">Documentation</a>
+                        <a class="nav-link" id="a-doc">Documentation</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="a-api">API</a>
