--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Rechercher une ville"
                         aria-label="Rechercher une ville">
-                    <button class="btn btn-outline-primary" type="button" onclick="reloadPage();">Rechercher</button>
+                    <button class="btn btn-outline-primary" type="submit">Rechercher</button>
                 </form>
             </div>
             <!-- End List of menus -->
