--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- 
-   But     : Page principale  
+   But     : Main page 
    Auteur  : Noé Henchoz
-   Date    : 26.05.2022 / v1.0 
+   Date    : 25.05.2022 / v1.0 
 -->
 
 <!DOCTYPE html>
