--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
 
     <!-- Start navbar -->
-    <nav class="navbar navbar-expand-lg top-0 navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-lg top-0 navbar-light sticky-top">
         <div class="container-fluid">
             <!-- Title on the left -->
             <a class="navbar-brand" id="a-home">Météhenchoz</a>
@@ -70,7 +70,7 @@
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Rechercher une ville"
                         aria-label="Rechercher une ville">
-                    <button class="btn btn-outline-primary" type="submit">Rechercher</button>
+                    <button class="btn btn-outline-dark" type="submit">Rechercher</button>
                 </form>
             </div>
             <!-- End List of menus -->
