--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Stylesheet Bootstrap 5.0.2 -->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
-    <!-- JS Bootstrap 5.0.2 -->
+    <!-- JS Bundle Bootstrap 5.0.2 -->
     <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
     <!-- My stylesheet -->
     <link rel="stylesheet" href="css/styles/styles.css">
     <!-- jQuery 3.6.0 -->
     <script src="js/jQuery/jquery-3.6.0.min.js"></script>
     <!-- All Ctrl JS -->
-    <script type="text/javascript" src="js/ctrls/indexCtrl.js"></script>
-    <script type="text/javascript" src="js/ctrls/httpServ.js"></script>
-    <script type="text/javascript" src="js/ctrls/homeCtrl.js"></script>
-    <script type="text/javascript" src="js/ctrls/footerCtrl.js"></script>
-    <script type="text/javascript" src="js/ctrls/forecastCtrl.js"></script>
-    <script type="text/javascript" src="js/ctrls/docCtrl.js"></script>
-    <script type="text/javascript" src="js/ctrls/apiCtrl.js"></script>
-    <script type="text/javascript" src="js/ctrls/aboutCtrl.js"></script>
-    <!-- Icon from font-awesome.com -->
+    <script src="js/ctrls/indexCtrl.js"></script>
+    <script src="js/ctrls/httpServ.js"></script>
+    <script src="js/ctrls/homeCtrl.js"></script>
+    <script src="js/ctrls/footerCtrl.js"></script>
+    <script src="js/ctrls/forecastCtrl.js"></script>
+    <script src="js/ctrls/docCtrl.js"></script>
+    <script src="js/ctrls/apiCtrl.js"></script>
+    <script src="js/ctrls/aboutCtrl.js"></script>
+    <!-- Icons 6.1.1 from https://fontawesome.com/ -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -41,7 +41,7 @@
 <body>
 
     <!-- Start navbar -->
-    <nav class="navbar navbar-expand-lg top-0 navbar-light sticky-top">
+    <nav class="navbar navbar-expand-lg top-0 navbar-light bg-light sticky-top">
         <div class="container-fluid">
             <!-- Title on the left -->
             <a class="navbar-brand" id="a-home">Météhenchoz</a>
