--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <!-- Title on the left -->
             <a class="navbar-brand" id="a-home">Météhenchoz</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" id="btn-toggler">
-                <span class="navbar-toggler-icon"></span>
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon" id="btn-toggler-icon"></span>
             </button>
             <!-- List of menus -->
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -70,7 +70,7 @@
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Rechercher une ville"
                         aria-label="Rechercher une ville">
-                    <button class="btn btn-outline-dark" type="submit">Rechercher</button>
+                    <button class="btn btn-outline-dark btnSearch" type="submit">Rechercher</button>
                 </form>
             </div>
             <!-- End List of menus -->
