--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/x-icon" href="img/sun.jpg" id="icon">
     <!-- Stylesheet Bootstrap 5.0.2 -->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <!-- JS Bundle Bootstrap 5.0.2 -->
@@ -28,7 +29,7 @@
     <script src="js/ctrls/httpServ.js"></script>
     <script src="js/ctrls/homeCtrl.js"></script>
     <script src="js/ctrls/footerCtrl.js"></script>
-    <script src="js/ctrls/forecastCtrl.js"></script>
+    <script src="js/ctrls/stationsCtrl.js"></script>
     <script src="js/ctrls/docCtrl.js"></script>
     <script src="js/ctrls/apiCtrl.js"></script>
     <script src="js/ctrls/aboutCtrl.js"></script>
@@ -54,7 +55,7 @@
                 <!-- Menus -->
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" id="a-forecast">Prévisions</a>
+                        <a class="nav-link" id="a-stations">Stations</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="a-doc">Documentation</a>
