--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Icon change from the actual time (sun or moon) -->
     <link rel="icon" type="image/x-icon" href="img/sun.jpg" id="icon">
     <!-- Stylesheet Bootstrap 5.0.2 -->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
