--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Icon change from the actual time (sun or moon) -->
-    <link rel="icon" type="image/x-icon" href="img/sun.jpg" id="icon">
+    <link rel="icon" type="image/x-icon" href="img/moon.png" id="icon">
     <!-- Stylesheet Bootstrap 5.0.2 -->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <!-- JS Bundle Bootstrap 5.0.2 -->
