--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     <script src="js/ctrls/httpServ.js"></script>
     <script src="js/ctrls/homeCtrl.js"></script>
     <script src="js/ctrls/footerCtrl.js"></script>
-    <script src="js/ctrls/stationsCtrl.js"></script>
     <script src="js/ctrls/docCtrl.js"></script>
     <script src="js/ctrls/apiCtrl.js"></script>
     <script src="js/ctrls/aboutCtrl.js"></script>
@@ -56,7 +55,7 @@
                 <!-- Menus -->
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" id="a-stations">Stations</a>
+                        <a class="nav-link active" id="a-stations">Stations</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="a-doc">Documentation</a>
@@ -93,10 +92,3 @@
 </body>
 
 </html>
-
-<!-- <div class="container">
-    <button type="button" id="abc" class="btn btn-primary" onclick="lol()">Bulle</button>
-    <div id="test">
-        <p>Je fais un test</p>
-    </div>
-</div> -->
