--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src="js/ctrls/StationsCtrl.js"></script>
     <script src="js/ctrls/footerCtrl.js"></script>
     <script src="js/ctrls/aboutCtrl.js"></script>
+    <script src="js/settings/api.js"></script>
     <!-- Icons 6.1.1 from https://fontawesome.com/ -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
