--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     </li>
                 </ul>
                 <!-- Search -->
-                <form class="d-flex">
+                <form class="d-flex" id="searchForm">
                     <input class="form-control me-2" id="nav-in-search" placeholder="Rechercher une ville"
-                        aria-label="Rechercher une ville">
+                        aria-label="Rechercher une ville" type="text">
                     <button class="btn btn-outline-dark btnSearch" type="button" id="nav-btn-search">Rechercher</button>
                 </form>
             </div>
