--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="js/ctrls/indexCtrl.js"></script>
     <script src="js/ctrls/httpServ.js"></script>
     <script src="js/ctrls/homeCtrl.js"></script>
-    <script src="js/ctrls/StationsCtrl.js"></script>
+    <script src="js/ctrls/stationsCtrl.js"></script>
     <script src="js/ctrls/footerCtrl.js"></script>
     <script src="js/ctrls/aboutCtrl.js"></script>
     <!-- All JS Settings -->
