--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
                         <a class="nav-link" id="a-stations">Stations</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="a-about">À propos</a>
+                        <a class="nav-link" id="a-about">About</a>
                     </li>
                 </ul>
                 <!-- Search -->
                 <form class="d-flex" id="searchForm">
-                    <input class="form-control me-2" id="nav-in-search" placeholder="Rechercher une ville"
-                        aria-label="Rechercher une ville" type="text">
-                    <button class="btn btn-outline-dark btnSearch" type="button" id="nav-btn-search">Rechercher</button>
+                    <input class="form-control me-2" id="nav-in-search" placeholder="Search for a city"
+                        aria-label="Search for a city" type="text">
+                    <button class="btn btn-outline-dark btnSearch" type="button" id="nav-btn-search">Search</button>
                 </form>
             </div>
             <!-- End List of menus -->
