--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script src="js/ctrls/stationsCtrl.js"></script>
     <script src="js/ctrls/footerCtrl.js"></script>
     <script src="js/ctrls/aboutCtrl.js"></script>
-    <!-- All JS Settings -->
+    <!-- All JS const or settings -->
     <script src="js/settings/api.js"></script>
     <!-- Icons 6.1.1 from https://fontawesome.com/ -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
