--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script src="js/ctrls/homeCtrl.js"></script>
     <script src="js/ctrls/stationsCtrl.js"></script>
     <script src="js/ctrls/footerCtrl.js"></script>
-    <script src="js/ctrls/aboutCtrl.js"></script>
+    <script src="js/ctrls/mapCtrl.js"></script>
     <!-- All JS const or settings -->
     <script src="js/const/api.js"></script>
     <!-- Icons 6.1.1 from https://fontawesome.com/ -->
@@ -59,7 +59,7 @@
                         <a class="nav-link" id="a-stations">Stations</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="a-about">About</a>
+                        <a class="nav-link" id="a-map">Map</a>
                     </li>
                 </ul>
                 <!-- Search -->
