--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <script src="js/ctrls/mapCtrl.js"></script>
     <!-- All JS const or settings -->
     <script src="js/const/api.js"></script>
+    <script src="js/const/cities.js"></script>
     <!-- Icons 6.1.1 from https://fontawesome.com/ -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
