--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
     <!-- My stylesheets -->
     <link rel="stylesheet" href="css/styles/indexStyles.css">
-    <link rel="stylesheet" href="css/styles/stationsStyles.css">
+    <link rel="stylesheet" href="css/styles/stationStyles.css">
     <link rel="stylesheet" href="css/styles/homeStyles.css">
     <link rel="stylesheet" href="css/styles/footerStyles.css">
     <link rel="stylesheet" href="css/styles/mapStyles.css">
@@ -36,7 +36,7 @@
     <script src="js/ctrls/indexCtrl.js"></script>
     <script src="js/ctrls/httpServ.js"></script>
     <script src="js/ctrls/homeCtrl.js"></script>
-    <script src="js/ctrls/stationsCtrl.js"></script>
+    <script src="js/ctrls/stationCtrl.js"></script>
     <script src="js/ctrls/footerCtrl.js"></script>
     <script src="js/ctrls/currentCtrl.js"></script>
     <script src="js/ctrls/forecastCtrl.js"></script>
@@ -73,7 +73,7 @@
                 <!-- Menus -->
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link items-nav" id="a-stations">Stations</a>
+                        <a class="nav-link items-nav" id="a-station">Station</a>
                     </li>
                 </ul>
                 <!-- Start Search -->
