--- a/index.html
+++ b/index.html
@@ -21,15 +21,8 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <!-- JS Bundle Bootstrap 5.0.2 -->
     <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
-    <!-- My stylesheets -->
-    <link rel="stylesheet" href="css/styles/indexStyles.css">
-    <link rel="stylesheet" href="css/styles/stationStyles.css">
-    <link rel="stylesheet" href="css/styles/homeStyles.css">
-    <link rel="stylesheet" href="css/styles/footerStyles.css">
-    <link rel="stylesheet" href="css/styles/mapStyles.css">
-    <link rel="stylesheet" href="css/styles/forecastStyles.css">
-    <link rel="stylesheet" href="css/styles/currentStyles.css">
-    <link rel="stylesheet" href="css/styles/animations.css">
+    <!-- My stylesheet -->
+    <link rel="stylesheet" href="css/styles/styles.css">
     <!-- CDN jQuery 3.6.0 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- All Ctrl JS -->
