--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
 <head>
     <!-- Title -->
-    <title>Météhenchoz</title>
+    <title>Météhenchoz - World weather</title>
     <!-- Encoding and responsive -->
     <meta charset="UTF-8">
+    <meta name="description" content="Test">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Icon that changes according to the time (sun or moon) -->
