--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
     <!-- My stylesheet -->
     <link rel="stylesheet" href="css/styles/styles.css">
-    <!-- CDN jQuery 3.6.0 -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- jQuery 3.6.0 -->
+    <script src="js/jQuery/jQuery-3.6.0.min.js"></script>
     <!-- All Ctrl JS -->
     <script src="js/ctrls/indexCtrl.js"></script>
     <script src="js/ctrls/httpServ.js"></script>
