--- a/index.html
+++ b/index.html
@@ -89,6 +89,18 @@
     </nav>
     <!-- End navbar -->
 
+    <!-- Start Toast for errors -->
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+        <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <strong class="me-auto">ERROR</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body" id="toast-error"></div>
+        </div>
+    </div>
+    <!-- End Toast for errors -->
+
     <!-- Start main content -->
     <main>
         <div class="container-fluid" id="views"></div>
