--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <nav class="navbar navbar-expand-lg top-0 navbar-light bg-light sticky-top">
         <div class="container-fluid">
             <!-- Title on the left -->
-            <a class="navbar-brand" id="a-home">Metehenchoz</a>
+            <a class="navbar-brand" id="a-home">Météhenchoz</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon" id="btn-toggler-icon"></span>
